--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -34,7 +34,11 @@
   font-size: 1.25rem;
   text-align: center;
 }
-
+@media only screen and (max-width: 500px){
+  .enter_email {
+    width: 70px;
+  }
+}
 #social-button {
   display: inline-block;
   padding: 4px;
